# ai-software-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  global.d.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
docs/: README.md  manual.md  product-brief.md  product-spec.md
hooks/: use-mounted.ts
lib/: mock-data.ts  tauri.test.ts  tauri.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260101000000_initial_schema.sql  20260102000000_task_model.sql  20260103000000_verification.sql  20260104000000_dispatch_queue.sql
src-tauri/src/: error.rs  fixtures.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/artifacts/: mod.rs
src-tauri/src/commands/: diffs.rs  dispatch.rs  engines.rs  mod.rs  projects.rs  runs.rs  tasks.rs  verification.rs  worktrees.rs
src-tauri/src/commands/pr/: mod.rs  report.rs  report_tests.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: mod.rs  worktree_context.rs  worktree_context_tests.rs  worktree_lifecycle.rs  worktree_lifecycle_tests.rs
src-tauri/src/db/: mod.rs
src-tauri/src/dispatch/: mod.rs  seams.rs  sweep.rs  worker.rs  worker_tests.rs
src-tauri/src/engines/: detection.rs  detection_tests.rs  github.rs  github_tests.rs  mod.rs
src-tauri/src/engines/adapters/: claude_code.rs
src-tauri/src/git/: diff.rs  diff_tests.rs  mod.rs  status.rs  status_tests.rs  tests.rs  worktree_paths.rs
src-tauri/src/policy/: mod.rs
src-tauri/src/process/: mod.rs  tests.rs
src-tauri/src/projects/: mod.rs  open.rs  open_tests.rs  repository.rs  repository_tests.rs
src-tauri/src/tasks/: brief.rs  brief_tests.rs  mod.rs  repository.rs  repository_tests.rs
src-tauri/src/verification/: mod.rs  repository.rs  repository_tests.rs  runner.rs  runner_tests.rs  settings.rs  settings_tests.rs
stores/: engine-store.ts  task-store.ts  ui-store.ts
(+108 files in other folders)
