[package]
name = "ai-software-studio"
version = "0.0.4"
description = "AI Software Studio — local-first AI coding agent command center"
edition = "2021"
rust-version = "1.86"

[lib]
name = "ai_software_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "process", "io-util"] }
specta = { version = "2.0.0-rc.20", features = ["derive", "serde_json"] }
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta-typescript = "0.0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
dashmap = "6"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
